--- a/FetchDependencies/FetchDependencies.csproj
+++ b/FetchDependencies/FetchDependencies.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mono.Cecil" Version="0.11.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
