--- a/NotACT/NotACT.csproj
+++ b/NotACT/NotACT.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Speech" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="FFXIV_ACT_Plugin">
       <HintPath>..\external_dependencies\FFXIV_ACT_Plugin.dll</HintPath>
     </Reference>
