--- a/OverlayPlugin.Core/resources/opcodes.jsonc
+++ b/OverlayPlugin.Core/resources/opcodes.jsonc
@@ -11,18 +11,6 @@
       "size": 11
     }
   },
-  "2022.07.05.0000.0000": {
-    // Region: KR
-    // Version: 6.05h
-    "MapEffect": {
-      "opcode": 404,
-      "size": 11
-    },
-    "CEDirector": {
-      "opcode": 423,
-      "size": 16
-    }
-  },
   "2022.07.08.0000.0000": {
     "MapEffect": {
       "opcode": 123,
@@ -65,6 +53,30 @@
       "size": 16
     }
   },
+  "2022.09.15.0000.0000": {
+    // Region: KR
+    // Version: 6.1
+    "MapEffect": {
+      "opcode": 750,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 567,
+      "size": 16
+    }
+  },
+  "2022.09.28.0000.0000": {
+    // Region CN
+    // Version 6.15
+    "MapEffect": {
+      "opcode": 943,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 209,
+      "size": 16
+    }
+  },
   "2022.10.05.0000.0000": {
     // Region: Global
     // Version: 6.25
@@ -74,6 +86,18 @@
     },
     "CEDirector": {
       "opcode": 507,
+      "size": 16
+    }
+  },
+  "2022.10.14.0000.0000": {
+    // Region: KR
+    // Version: 6.11
+    "MapEffect": {
+      "opcode": 266,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 872,
       "size": 16
     }
   },
@@ -89,6 +113,66 @@
       "size": 16
     }
   },
+  "2022.11.01.0000.0000": {
+    // Region CN
+    // Version 6.18
+    "MapEffect": {
+      "opcode": 443,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 410,
+      "size": 16
+    }
+  },
+  "2022.11.09.0000.0000": {
+    // Region: Global
+    // Version: 6.28 Hotfix
+    "MapEffect": {
+      "opcode": 268,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 603,
+      "size": 16
+    }
+  },
+  "2022.11.10.0000.0000": {
+    // Region: KR
+    // Version: 6.15
+    "MapEffect": {
+      "opcode": 300,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 799,
+      "size": 16
+    }
+  },
+  "2022.12.07.0000.0000": {
+    // Region: CN
+    // Version: 6.2
+    "MapEffect": {
+      "opcode": 777,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 140,
+      "size": 16
+    }
+  },
+  "2022.12.09.0000.0000": {
+    // Region: KR
+    // Version: 6.18
+    "MapEffect": {
+      "opcode": 698,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 904,
+      "size": 16
+    }
+  },
   "2022.12.23.0000.0000": {
     // Region: Global
     // Version: 6.3
@@ -98,6 +182,54 @@
     },
     "CEDirector": {
       "opcode": 617,
+      "size": 16
+    }
+  },
+  "2023.01.11.0000.0000": {
+    // Region: Global
+    // Version: 6.3 Hotfix
+    "MapEffect": {
+      "opcode": 718,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 184,
+      "size": 16
+    }
+  },
+  "2023.01.17.0000.0000": {
+    // Region: Global
+    // Version: 6.31
+    "MapEffect": {
+      "opcode": 729,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 275,
+      "size": 16
+    }
+  },
+  "2023.01.25.0000.0000": {
+    // Region: CN
+    // Version: 6.2 Hotfix
+    "MapEffect": {
+      "opcode": 587,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 228,
+      "size": 16
+    }
+  },
+  "2023.02.01.0000.0000": {
+    // Region: KR
+    // Version: 6.2
+    "MapEffect": {
+      "opcode": 762,
+      "size": 11
+    },
+    "CEDirector": {
+      "opcode": 949,
       "size": 16
     }
   },
