--- a/IINACT/IINACT.csproj
+++ b/IINACT/IINACT.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\FetchDependencies\FetchDependencies.csproj" />
     <ProjectReference Include="..\machina\Machina\Machina.csproj" />
     <ProjectReference Include="..\OverlayPlugin.Core\OverlayPlugin.Core.csproj" />
+    <ProjectReference Include="..\PostNamazu\PostNamazu.csproj" />
   </ItemGroup>
 
   <ItemGroup>
