--- a/Zodiark/Zodiark.csproj
+++ b/Zodiark/Zodiark.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Iced" Version="1.18.0" />
+    <Reference Include="Iced">
+      <HintPath>..\..\csharp\Intel\Iced\bin\Release\net7.0\Iced.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
