--- a/CactbotSelf/CactbotSelf.csproj
+++ b/CactbotSelf/CactbotSelf.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="H.Pipes" Version="2.0.47" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
