--- a/PostNamazu/PostNamazu.csproj
+++ b/PostNamazu/PostNamazu.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFramework>net7.0-windows</TargetFramework>
+      <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
@@ -27,11 +27,11 @@
 
   <ItemGroup>
     <Reference Include="Dalamud">
-      <HintPath>E:\Dalamud\XIVLauncher\addon\Hooks\dev\Dalamud.dll</HintPath>
+      <HintPath>$(appdata)\XIVLauncher\addon\Hooks\dev\\Dalamud.dll</HintPath>
         <Private>False</Private>
     </Reference>
     <Reference Include="FFXIVClientStructs">
-      <HintPath>E:\Dalamud\XIVLauncher\addon\Hooks\dev\FFXIVClientStructs.dll</HintPath>
+      <HintPath>$(appdata)\XIVLauncher\addon\Hooks\dev\\FFXIVClientStructs.dll</HintPath>
         <Private>False</Private>
     </Reference>
     <Reference Include="FFXIV_ACT_Plugin">
@@ -67,13 +67,17 @@
 		<Private>False</Private>
     </Reference>
     <Reference Include="ImGui.NET">
-      <HintPath>E:\Dalamud\XIVLauncher\addon\Hooks\dev\ImGui.NET.dll</HintPath>
+      <HintPath>$(appdata)\XIVLauncher\addon\Hooks\dev\\ImGui.NET.dll</HintPath>
         <Private>False</Private>
     </Reference>
     <Reference Include="ImGuiScene">
-      <HintPath>E:\Dalamud\XIVLauncher\addon\Hooks\dev\ImGuiScene.dll</HintPath>
+      <HintPath>$(appdata)\XIVLauncher\addon\Hooks\dev\\ImGuiScene.dll</HintPath>
         <Private>False</Private>
     </Reference>
+      <Reference Include="FFXIVClientStructs">
+          <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+          <Private>false</Private>
+      </Reference>
   </ItemGroup>
 
   <ItemGroup>
