--- a/OverlayPlugin.Common/OverlayPlugin.Common.csproj
+++ b/OverlayPlugin.Common/OverlayPlugin.Common.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <DalamudLibPath>E:\Dalamud\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+        <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
