--- a/PostNamazu/PostNamazu.csproj
+++ b/PostNamazu/PostNamazu.csproj
@@ -15,10 +15,11 @@
     <DebugType>full</DebugType>
   </PropertyGroup>
 
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+    <PropertyGroup>
+        <DalamudLibPath>C:\Users\pc\AppData\Roaming\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NotACT\NotACT.csproj" />
@@ -26,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+      <Reference Include="Newtonsoft.Json">
+          <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
+          <Private>false</Private>
+      </Reference>
     <Reference Include="Dalamud">
       <HintPath>$(appdata)\XIVLauncher\addon\Hooks\dev\\Dalamud.dll</HintPath>
         <Private>False</Private>
