--- a/tts/TTS.csproj
+++ b/tts/TTS.csproj
@@ -10,9 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NAudio" Version="2.1.0" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
     <PackageReference Include="System.Net.WebSockets.Client.Managed" Version="1.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="EdgeTtsSharp">
+      <HintPath>..\..\..\c#\EdgeTtsSharp\EdgeTtsSharp\bin\Release\netstandard2.1\EdgeTtsSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="EdgeTtsSharp.NAudio">
+      <HintPath>..\..\..\c#\EdgeTtsSharp\EdgeTtsSharp.NAudio\bin\Release\netstandard2.1\EdgeTtsSharp.NAudio.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
