--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "machina"]
 	path = machina
-	url = https://github.com/tssailzz8/machina
+	url = https://github.com/marzent/machina
 [submodule "OverlayPlugin.Core/resources/act-overlays"]
 	path = OverlayPlugin.Core/resources/act-overlays
 	url = https://github.com/cking/act-overlays
