--- a/IINACT/IINACT.csproj
+++ b/IINACT/IINACT.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <Authors>Usagi</Authors>
         <Company>Dezent</Company>
-        <Version>2.7.4.0</Version>
+        <Version>2.9.4.6</Version>
         <Description>A parsing plugin.</Description>
         <Copyright></Copyright>
         <PackageProjectUrl>https://github.com/marzent/IINACT</PackageProjectUrl>
@@ -18,11 +18,11 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-        <LangVersion>11</LangVersion>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup>
-        <DalamudLibPath>C:\Users\pc\AppData\Roaming\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+        <DalamudLibPath>$(appdata)\XIVLauncherCN\addon\Hooks\dev\</DalamudLibPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     </PropertyGroup>
@@ -36,11 +36,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="12.0.0" />
-        <PackageReference Include="System.Speech" Version="8.0.0" />
+        <PackageReference Include="DalamudPackager" Version="13.0.0" />
+        <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.183">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="NAudio" Version="2.2.1" />
+        <PackageReference Include="System.Speech" Version="10.0.0" />
+        <PackageReference Include="Unscrambler.XIV" Version="7.38.0" />
         <Reference Include="FFXIVClientStructs">
             <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
             <Private>false</Private>
+        </Reference>
+        <Reference Include="InteropGenerator.Runtime">
+          <HintPath>$(DalamudLibPath)InteropGenerator.Runtime.dll</HintPath>
         </Reference>
         <Reference Include="Newtonsoft.Json">
             <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
@@ -50,8 +59,8 @@
             <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
             <Private>false</Private>
         </Reference>
-        <Reference Include="ImGui.NET">
-            <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
+        <Reference Include="Dalamud.Bindings.ImGui">
+            <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImGui.dll</HintPath>
             <Private>false</Private>
         </Reference>
         <Reference Include="ImGuiScene">
@@ -69,14 +78,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CactbotSelf\CactbotSelf.csproj" />
+        <ProjectReference Include="..\..\..\net11\IINACT\CactbotSelf\CactbotSelf.csproj" />
+        <ProjectReference Include="..\..\..\net11\IINACT\PostNamazu\PostNamazu.csproj" />
         <ProjectReference Include="..\FetchDependencies\FetchDependencies.csproj" />
         <ProjectReference Include="..\machina\Machina.FFXIV\Machina.FFXIV.csproj" />
         <ProjectReference Include="..\machina\Machina\Machina.csproj" />
         <ProjectReference Include="..\NotACT\NotACT.csproj" />
         <ProjectReference Include="..\OverlayPlugin.Core\OverlayPlugin.Core.csproj" />
-        <ProjectReference Include="..\PostNamazu\PostNamazu.csproj" />
-        <ProjectReference Include="..\tts\TTS.csproj" />
     </ItemGroup>
 
     <ItemGroup>
